<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FgwOA</string>
    <string name="SERVER_URL">http://210.74.194.118:8082/gw-web-manager/gws/</string>

    <string name="prompt_userid">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_login">登录</string>
    <string name="prompt_loginout">登出</string>
    <string name="prompt_welcome">欢迎登录</string>
    <string name="prompt_gw">公文阅览</string>
    <string name="prompt_receive">收文</string>
    <string name="prompt_send">发文</string>
    <string name="prompt_sign">签报</string>
    <string name="prompt_all">全部</string>
    <string name="prompt_pend">待批</string>
    <string name="prompt_approve">已批</string>
    <string name="prompt_pageNum">当前页号</string>
    <string name="prompt_pageSize">每页显示记录数</string>
    <string name="prompt_keyword">检索关键字</string>
    <string name="prompt_search">搜索或者输入内容</string>
    <string name="prompt_searchButton">搜索</string>
    <string name="list_text_1">来文单位：%1$s</string>
    <string name="list_text_2">待批：%1$s</string>
    <string name="list_text_3">来文日期：%1$s</string>
    <string name="list_text_4">类型：%1$s</string>
    <string name="prompt_check">公文查看</string>
    <string name="prompt_list">公文列表</string>
    <string name="prompt_form">表单查看</string>
    <string name="text1">紧\t急\t程\t度</string>
    <string name="text2">密级、保密期限</string>
    <string name="text3">定\t密\t依\t据</string>
    <string name="text4">市\t发\t改\t委\t办\t文</string>
    <string name="text5.0">第</string>
    <string name="text5.1">号</string>
    <string name="text6.0">年</string>
    <string name="text6.1">月</string>
    <string name="text6.2">日</string>
    <string name="text7">北\t京\t市\t发\t展\t和\t改\t革\t委\t员\t会\t发\t文\t稿\t纸</string>
    <string name="text8.0">京发改</string>
    <string name="text8.1">[</string>
    <string name="text8.2">]</string>
    <string name="text8.3">号</string>
    <string name="text9">委领导批示:</string>
    <string name="text10">主办处（室）审核意见：</string>
    <string name="text11">办公室审核意见：</string>
    <string name="text12">主办处（室）及承办人：</string>
    <string name="text13">会签处（室）意见：</string>
    <string name="text14">联系电话：</string>
    <string name="text15">公开属性：</string>
    <string name="text16">文件标题：</string>
    <string name="text17">市发改委办公室</string>
    <string name="c1">密级、保密期限</string>
    <string name="c2.0">紧\t急\t程\t度</string>
    <string name="c2.1">急</string>
    <string name="c2.2">程</string>
    <string name="c2.3">度</string>
    <string name="c3">北京市发展和改革委办文</string>
    <string name="c4">北\t京\t市\t发\t展\t和\t改\t革\t委\t员\t会\t公\t文\t批\t办\t单</string>
    <string name="c5">来文单位</string>
    <string name="c6">文\t\t\t\t号</string>
    <string name="c7">文件标题</string>
    <string name="c8">办文类型</string>
    <string name="c9">办理期限</string>
    <string name="c10">拟办意见：</string>
    <string name="c11">承办情况：</string>
    <string name="c12">附注：</string>
    <string name="c13">承办人：</string>
    <string name="c14">电话：</string>
    <string name="d1">北  京  市  发  展  和  改  革  委  员  会  联  合  发  文  稿  纸</string>
    <string name="d2">会签栏：</string>
    <string name="d3">办公室核稿人：</string>
    <string name="d4">处（室）核稿人：</string>
    <string name="d5">会签处（室）意见：</string>
    <string name="d6">处（室）拟稿人：</string>
    <string name="d7">主送单位：</string>
    <string name="d8.0">共印</string>
    <string name="d8.1">份</string>
    <string name="e1">北\t京\t市\t发\t展\t和\t改\t革\t委\t员\t会\t签\t报\t稿\t纸</string>
    <string name="gongwenqianpi">公文签批</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="gongwenpibandan">公文批办单</string>
    <string name="pishiqingkuang">批示情况</string>
    <string name="fujian">附件</string>
    <string name="btn_pishi">批示</string>
    <string name="main_page">北京市发展和改革委员会移动办公平台</string>
    <string name="fw_wenhao">第%1$s号批示记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

