<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="26dp"
            android:orientation="vertical"
            >
            
            <TextView
                android:id="@+id/list_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorList"
                android:layout_marginTop="24dp"
                />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_text_1"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:id="@+id/list_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="157dp"
                    android:text="@string/list_text_2"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:id="@+id/list_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="128dp"
                    android:text="@string/list_text_3"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:id="@+id/list_text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="256dp"
                    android:text="@string/list_text_4"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />

                <TextView
                    android:id="@+id/list_text_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/colorListText"
                    />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>