<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableLayout
            android:id="@+id/tb2"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/blackstroke"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#000" />
            <TableRow>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/c3"
                    android:textSize="21px"
                    android:textColor="#ff0000"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#000" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="25sp">
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:text="@string/text5.0"
                    android:textSize="21px"
                    android:textColor="#f00"
                    android:gravity="right"
                    />
                <TextView
                    android:id="@+id/BANWENHAO"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/text5.1"
                    android:textSize="21px"
                    android:textColor="#f00"
                    android:gravity="left"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#000" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="25sp">
                <TextView
                    android:gravity="right"
                    android:id="@+id/year"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:text="@string/text6.0"
                    android:textSize="21px"
                    android:textColor="#f00"
                    android:gravity="center"
                    />
                <TextView
                    android:gravity="right"
                    android:id="@+id/month"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:text="@string/text6.1"
                    android:textSize="21px"
                    android:textColor="#f00"
                    android:gravity="center"
                    />
                <TextView
                    android:gravity="right"
                    android:id="@+id/day"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:text="@string/text6.2"
                    android:textSize="21px"
                    android:textColor="#f00"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="53dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#000" />
        </TableLayout>


        <TableLayout
            android:id="@+id/tb3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tb2"
            >
            <TextView
                android:layout_height="10sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/e1"
                android:textColor="#f00"
                android:textSize="40px"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_height="10sp"/>
        </TableLayout>
        <TableLayout
            android:id="@+id/tb4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tb3"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableLayout>
        <TableLayout
            android:id="@+id/tb5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tb4"
            android:background="@drawable/blackstroke"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#f00" />
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text9"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/LEADER"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="360sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#f00" />
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/text10"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/text11"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>

            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/ZHUBAN"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="150sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/th_instruction_3"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="150sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#f00" />
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/text12"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/text13"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/host_3"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="150sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/HUIQIAN"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="150sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TableRow
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <LinearLayout android:layout_weight="1"
                    >
                <TextView
                    android:paddingLeft="20dp"
                    android:text="@string/text14"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
                <TextView
                    android:id="@+id/DIANHUA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#f00" />
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/text16"
                    android:textColor="#f00"
                    android:textSize="21px"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TableRow >
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/DOCTITLE"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="70sp"/>
                <TextView
                    android:layout_width="1sp"
                    android:layout_height="fill_parent"
                    android:background="#f00"
                    />
            </TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:background="#f00" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text17"
                android:textSize="21px"
                android:textColor="#f00"
                android:gravity="right"
                android:background="@drawable/textstroke"/>

        </TableLayout>

    </RelativeLayout>
</ScrollView>